PHP Login Form and Navbar Changes
Added a functioning log in form and changed the navbar a little. Log in
isn't perfect and still has some problems

--- a/index.html
+++ b/index.html
@@ -22,13 +22,7 @@
 					<a href="about.html">about</a>
 				</li>
 				<li>
-					<a href="hairstyle.html">hairstyles</a>
-				</li>
-				<li>
-					<a href="news.html">news</a>
-				</li>
-				<li>
-					<a href="contact.html">contact</a>
+					<a href="login.html">log in</a>
 				</li>
 			</ul>
 		</div>
