--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			<!-- <div class="logo"> -->
                             <a href="index.html">
                                 <img src="images/logo.png" alt="" >
+                                <fontWayne Hills NHS
                             </a>
 			<!-- </div> -->
 			<ul>
@@ -22,7 +23,7 @@
 					<a href="about.html">about</a>
 				</li>
 				<li>
-					<a href="login.html">log in</a>
+					<a href="login.html">my nhs</a>
 				</li>
 			</ul>
 		</div>
