--- a/news.html
+++ b/news.html
@@ -1,85 +1,109 @@
 <!DOCTYPE HTML>
-<!-- Website Template by freewebsitetemplates.com -->
+<!-- Website template by freewebsitetemplates.com -->
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>News - ZiZurz Website Template</title>
+	<title>News - Zerotype Website Template</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
 	<div id="header">
-		<div class="section">
+		<div>
 			<div class="logo">
-				<a href="index.html">zizurz</a>
+				<a href="index.html">Zero Type</a>
 			</div>
-			<ul>
+			<ul id="navigation">
 				<li>
-					<a href="index.html">home</a>
+					<a href="index.html">Home</a>
 				</li>
 				<li>
-					<a href="about.html">about</a>
+					<a href="features.html">Features</a>
+				</li>
+				<li class="active">
+					<a href="news.html">News</a>
 				</li>
 				<li>
-					<a href="hairstyle.html">hairstyles</a>
-				</li>
-				<li class="selected">
-					<a href="news.html">news</a>
+					<a href="about.html">About</a>
 				</li>
 				<li>
-					<a href="contact.html">contact</a>
+					<a href="contact.html">Contact</a>
 				</li>
 			</ul>
 		</div>
 	</div>
-	<div id="body">
-		<div class="blog">
-			<div class="content">
-				<h3>news</h3>
-				<p>
-					Our website templates are created with inspiration, checked for quality and originality and meticulously sliced and coded. What’s more, they’re absolutely free! You can do a lot with them. You can modify them. You can use them to design websites for clients, so long as you agree with the <a href="http://www.freewebsitetemplates.com/about/terms">Terms of Use</a>. You can even remove all our links if you want to. Looking for more templates? Just browse through all our <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a> and find what you’re looking for.
-				</p>
-				<p>
-					But if you don’t find any website template you can use, you can try our <a href="http://www.freewebsitetemplates.com/freewebdesign/">Free Web Design</a> service and tell us all about it. Maybe you’re looking for something different, something special. And we love the challenge of doing something different and something special. If you’re experiencing issues and concerns about this website template, join the discussion on <a href="http://www.freewebsitetemplates.com/forums/">on our forum</a> and meet other people in the community who share the same interests with you. Version 13.
-				</p>
-				<p>
-					Please feel free to remove some or all the text and links of this page and replace it with your own About content. This website template has been designed by <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a> for you, for free. You can replace all this text with your own text. You can remove any link to our website from this website template, you're free to use this website template without linking back to us. If you're having problems editing this website template, then don't hesitate to ask for help on the <a href="http://www.freewebsitetemplates.com/forums/">Forums</a>.
-				</p>
-			</div>
-			<div class="sidebar">
-				<h3>recent news</h3>
-				<ul>
-					<li>
-						<span><a href="#">Hair, I just meet you</a></span>
+	<div id="contents">
+		<div class="main">
+			<h1>News</h1>
+			<ul class="news">
+				<li>
+					<div class="date">
 						<p>
-							Our website templates are created with inspiration, checked for quality and originality and meticulously sliced and coded. What’s more, they’re absolutely free!
+							<span>03</span>
+							2023
 						</p>
-					</li>
-					<li>
-						<span><a href="#">Styling Hair</a></span>
+					</div>
+					<h2>Updates: More Features Released <span>Brian Ferry</span></h2>
+					<p>
+						You can replace all this text with your own text. Want an easier solution for a Free Website? Head straight to Wix and immediately start customizing your website! Wix is an online website builder with a simple drag &amp; drop interface, meaning you do the work online and instantly publish to the web. All Wix templates are fully customizable and free to use. Just pick one you like, click Edit, and enter the online editor. <span><a href="post.html" class="more">Read More</a></span>
+					</p>
+				</li>
+				<li>
+					<div class="date">
 						<p>
-							This website template has been designed by Free Website Templates for you, for free. You can remove any link to our website from this website template, you're free to use this website
+							<span>03</span>
+							2023
 						</p>
-					</li>
-					<li>
-						<span><a href="#">How to pick the right hairstyle</a></span>
+					</div>
+					<h2>Updates: More Features Released <span>Brian Ferry</span></h2>
+					<p>
+						You can replace all this text with your own text. Want an easier solution for a Free Website? Head straight to Wix and immediately start customizing your website! Wix is an online website builder with a simple drag &amp; drop interface, meaning you do the work online and instantly publish to the web. All Wix templates are fully customizable and free to use. Just pick one you like, click Edit, and enter the online editor. <span><a href="post.html" class="more">Read More</a></span>
+					</p>
+				</li>
+				<li>
+					<div class="date">
 						<p>
-							You can use them to design websites for clients, so long as you agree with the Terms of Use. You can even remove all our links if you want to.
+							<span>03</span>
+							2023
 						</p>
-					</li>
-				</ul>
-			</div>
+					</div>
+					<h2>Updates: More Features Released <span>Brian Ferry</span></h2>
+					<p>
+						You can replace all this text with your own text. Want an easier solution for a Free Website? Head straight to Wix and immediately start customizing your website! Wix is an online website builder with a simple drag &amp; drop interface, meaning you do the work online and instantly publish to the web. All Wix templates are fully customizable and free to use. Just pick one you like, click Edit, and enter the online editor. <span><a href="post.html" class="more">Read More</a></span>
+					</p>
+				</li>
+			</ul>
+		</div>
+		<div class="sidebar">
+			<h1>Popular Posts</h1>
+			<ul class="posts">
+				<li>
+					<h4 class="title"><a href="post.html">Making It Work</a></h4>
+					<p>
+						I'm a paragraph. Click here to add your own text and edit me. I’m a great place for you to tell a story and let your users know a little more about you.
+					</p>
+				</li>
+				<li>
+					<h4 class="title"><a href="post.html">Designs and Concepts</a></h4>
+					<p>
+						I'm a paragraph. Click here to add your own text and edit me. I’m a great place for you to tell a story and let your users know a little more about you.
+					</p>
+				</li>
+				<li>
+					<h4 class="title"><a href="post.html">Getting It Done!</a></h4>
+					<p>
+						I'm a paragraph. Click here to add your own text and edit me. I’m a great place for you to tell a story and let your users know a little more about you.
+					</p>
+				</li>
+			</ul>
 		</div>
 	</div>
 	<div id="footer">
-		<div>
-			<div class="connect">
-				<a href="http://freewebsitetemplates.com/go/twitter/" id="twitter">twitter</a>
-				<a href="http://freewebsitetemplates.com/go/facebook/" id="facebook">facebook</a>
-				<a href="http://freewebsitetemplates.com/go/googleplus/" id="googleplus">googleplus</a>
-				<a href="http://pinterest.com/fwtemplates/" id="pinterest">pinterest</a>
+		<div class="clearfix">
+			<div id="connect">
+				<a href="http://freewebsitetemplates.com/go/facebook/" target="_blank" class="facebook"></a><a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a><a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a><a href="http://www.freewebsitetemplates.com/misc/contact/" target="_blank" class="tumbler"></a>
 			</div>
 			<p>
-				&copy; copyright 2023 | all rights reserved.
+				© 2023 Zerotype. All Rights Reserved.
 			</p>
 		</div>
 	</div>
