--- a/contact.html
+++ b/contact.html
@@ -1,68 +1,66 @@
 <!DOCTYPE HTML>
-<!-- Website Template by freewebsitetemplates.com -->
+<!-- Website template by freewebsitetemplates.com -->
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Contact - ZiZurz Website Template</title>
+	<title>Contact - Zerotype Website Template</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
 	<div id="header">
-		<div class="section">
+		<div>
 			<div class="logo">
-				<a href="index.html">zizurz</a>
+				<a href="index.html">Zero Type</a>
 			</div>
-			<ul>
+			<ul id="navigation">
 				<li>
-					<a href="index.html">home</a>
+					<a href="index.html">Home</a>
 				</li>
 				<li>
-					<a href="about.html">about</a>
+					<a href="features.html">Features</a>
 				</li>
 				<li>
-					<a href="hairstyle.html">hairstyles</a>
+					<a href="news.html">News</a>
 				</li>
 				<li>
-					<a href="news.html">news</a>
+					<a href="about.html">About</a>
 				</li>
-				<li class="selected">
-					<a href="contact.html">contact</a>
+				<li class="active">
+					<a href="contact.html">Contact</a>
 				</li>
 			</ul>
 		</div>
 	</div>
-	<div id="body">
-		<div class="article">
-			<h3>contact us</h3>
+	<div id="contents">
+		<div class="section">
+			<h1>Contact</h1>
 			<p>
-				This website template has been designed by <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a> for you, for free. You can replace all this text with your own text. You can remove any link to our website from this website template, you're free to use this website template without linking back to us. If you're having problems editing this website template, then don't hesitate to ask for help on the <a href="http://www.freewebsitetemplates.com/forums/">Forums</a>.
+				You can replace all this text with your own text. Want an easier solution for a Free Website? Head straight to Wix and immediately start customizing your website! Wix is an online website builder with a simple drag & drop interface, meaning you do the work online and instantly publish to the web. All Wix templates are fully customizable and free to use. Just pick one you like, click Edit, and enter the online editor.
 			</p>
-			<ul>
-				<li>
-					<span>Address :</span> 7177 Saint Michael Drive, Los Angeles, CA 90048, United States
-				</li>
-				<li>
-					<span>Office Phone Number :</span> (864) 232-3553
-				</li>
-				<li>
-					<span>Fax Number :</span> (864) 232-4160
-				</li>
-				<li>
-					<span>Email :</span> <a href="http://www.freewebsitetemplates.com/misc/contact">info@zizurz.com</a>
-				</li>
-			</ul>
+			<form action="index.html" method="post" class="message">
+				<input type="text" value="Name" onFocus="this.select();" onMouseOut="javascript:return false;"/>
+				<input type="text" value="Email" onFocus="this.select();" onMouseOut="javascript:return false;"/>
+				<input type="text" value="Subject" onFocus="this.select();" onMouseOut="javascript:return false;"/>
+				<textarea></textarea>
+				<input type="submit" value="Send"/>
+			</form>
+		</div>
+		<div class="section contact">
+			<p>
+				For Inquiries Please Call: <span>877-433-8137</span>
+			</p>
+			<p>
+				Or you can visit us at: <span>ZeroType<br> 250 Business ParK Angel Green, Sunville 109935</span>
+			</p>
 		</div>
 	</div>
 	<div id="footer">
-		<div>
-			<div class="connect">
-				<a href="http://freewebsitetemplates.com/go/twitter/" id="twitter">twitter</a>
-				<a href="http://freewebsitetemplates.com/go/facebook/" id="facebook">facebook</a>
-				<a href="http://freewebsitetemplates.com/go/googleplus/" id="googleplus">googleplus</a>
-				<a href="http://pinterest.com/fwtemplates/" id="pinterest">pinterest</a>
+		<div class="clearfix">
+			<div id="connect">
+				<a href="http://freewebsitetemplates.com/go/facebook/" target="_blank" class="facebook"></a><a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a><a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a><a href="http://www.freewebsitetemplates.com/misc/contact/" target="_blank" class="tumbler"></a>
 			</div>
 			<p>
-				&copy; copyright 2023 | all rights reserved.
+				© 2023 Zerotype. All Rights Reserved.
 			</p>
 		</div>
 	</div>
