--- a/index.html
+++ b/index.html
@@ -1,109 +1,82 @@
 <!DOCTYPE HTML>
+<!-- Website template by freewebsitetemplates.com -->
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Home- Wayne Hills NHS</title>
+	<title>Zerotype Website Template</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
-        <link rel="icon" type="image/ico" href="../images/favicon.ico">
 </head>
 <body>
 	<div id="header">
-		<div class="section">
-			<!-- <div class="logo"> -->
-                            <a href="index.html">
-                                <img src="images/logo.png" alt="" >
-                                <fontWayne Hills NHS
-                            </a>
-			<!-- </div> -->
-			<ul>
-				<li class="selected">
-					<a href="index.html">home</a>
+		<div>
+			<div class="logo">
+				<a href="index.html">Zero Type</a>
+			</div>
+			<ul id="navigation">
+				<li class="active">
+					<a href="index.html">Home</a>
 				</li>
 				<li>
-					<a href="about.html">about</a>
+					<a href="features.html">Features</a>
 				</li>
 				<li>
-					<a href="login.html">my nhs</a>
+					<a href="news.html">News</a>
+				</li>
+				<li>
+					<a href="about.html">About</a>
+				</li>
+				<li>
+					<a href="contact.html">Contact</a>
 				</li>
 			</ul>
 		</div>
-		<div class="article">
-			<h1>About the National Honor Society</h1>
-		</div>
 	</div>
-	<div id="body">
-		<ul>
-			<li>
-				<a href="hairstyle.html"><img src="images/hairstyle17.jpg" alt=""></a>
-				<b>best hairstylists</b>
+	<div id="adbox">
+		<div class="clearfix">
+			<img src="images/box.png" alt="Img" height="342" width="368">
+			<div>
+				<h1>Ideas?</h1>
+				<h2>That's what we live for.</h2>
 				<p>
-					Our website templates are created with inspiration, checked for quality and originality and meticulously sliced and coded. What’s more, they’re absolutely free!
-				</p>
-			</li>
-			<li>
-				<a href="hairstyle.html"><img src="images/hairstyle18.jpg" alt=""></a>
-				<b>featured hairstyle</b>
-				<p>
-					Our website templates are created with inspiration, checked for quality and originality and meticulously sliced and coded. What’s more, they’re absolutely free!
-				</p>
-			</li>
-			<li>
-				<a href="hairstyle.html"><img src="images/hairstyle19.jpg" alt=""></a>
-				<b>hair care</b>
-				<p>
-					Our website templates are created with inspiration, checked for quality and originality and meticulously sliced and coded. What’s more, they’re absolutely free!
-				</p>
-			</li>
-			<li>
-				<a href="hairstyle.html"><img src="images/hairstyle20.jpg" alt=""></a>
-				<b>we "hair" you</b>
-				<p>
-					Our website templates are created with inspiration, checked for quality and originality and meticulously sliced and coded. What’s more, they’re absolutely free!
-				</p>
-			</li>
-		</ul>
-		<div>
-			<div class="featured">
-				<h2>featured</h2>
-				<img src="images/featured.jpg" alt="">
-				<h3>Hair, I just meet you</h3>
-				<p>
-					Our website templates are created with inspiration, checked for quality and originality and meticulously sliced and coded. What’s more, they’re absolutely free! You can do a lot with them. You can modify them. You can use them to design websites for clients, so long as you agree with the Terms of Use.
-				</p>
-				<p>
-					You can even remove all our links if you want to. Looking for more templates? Just browse through all our Free Website Templates and find what you’re looking for. But if you don’t find any website template you can use, you can try our Free Web Design service and tell us all about it. Maybe you’re looking for something different, something special.
-				</p>
-				<p>
-					And we love the challenge of doing something different and something special. If you’re experiencing issues and concerns about this website template, join the discussion on our forum and meet other people in the community who share the same interests with you. Version 13.
+					Wix is an online website builder with a simple drag & drop interface, meaning you do the work online and instantly publish to the web. <span><a href="index.html" class="btn">Try It Now!</a><b>Don’t worry it’s for free</b></span>
 				</p>
 			</div>
-			<div class="section">
-				<div class="article">
-					<h2>hairstyle</h2>
-					<p>
-						This website template has been designed by <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a> for you, for free. You can replace all this text with your own text. You can remove any link to our website from this website template, you're free to use this website template without linking back to us. If you're having problems editing this website template, then don't hesitate to ask for help on the <a href="http://www.freewebsitetemplates.com/forums/">Forums</a>.
-					</p>
-					<a href="#">Mike M.</a>
-				</div>
-				<div class="newsletter">
-					<img src="images/skinhead.png" alt="">
-					<p>
-						Are you losing your hair? Let us help you in bringing back your confidence. <span>Call Us at 1800-0000-0000</span>
-					</p>
-				</div>
+		</div>
+	</div>
+	<div id="contents">
+		<div id="tagline" class="clearfix">
+			<h1>Design With Simplicity.</h1>
+			<div>
+				<p>
+					You can replace all this text with your own text. Want an easier solution for a Free Website?
+				</p>
+				<p>
+					Head straight to Wix and immediately start customizing your website!
+				</p>
+				<p>
+					Wix is an online website builder with a simple drag & drop interface, meaning you do the work online and instantly publish to the web.
+				</p>
+			</div>
+			<div>
+				<p>
+					You can replace all this text with your own text. Want an easier solution for a Free Website?
+				</p>
+				<p>
+					Head straight to Wix and immediately start customizing your website!
+				</p>
+				<p>
+					Wix is an online website builder with a simple drag & drop interface, meaning you do the work online and instantly publish to the web.
+				</p>
 			</div>
 		</div>
 	</div>
 	<div id="footer">
-		<div>
-			<div class="connect">
-				<a href="http://freewebsitetemplates.com/go/twitter/" id="twitter">twitter</a>
-				<a href="http://freewebsitetemplates.com/go/facebook/" id="facebook">facebook</a>
-				<a href="http://freewebsitetemplates.com/go/googleplus/" id="googleplus">googleplus</a>
-				<a href="http://pinterest.com/fwtemplates/" id="pinterest">pinterest</a>
+		<div class="clearfix">
+			<div id="connect">
+				<a href="http://freewebsitetemplates.com/go/facebook/" target="_blank" class="facebook"></a><a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a><a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a><a href="http://www.freewebsitetemplates.com/misc/contact/" target="_blank" class="tumbler"></a>
 			</div>
 			<p>
-				&copy; copyright 2023 | all rights reserved.
+				© 2023 Zerotype. All Rights Reserved.
 			</p>
 		</div>
 	</div>
