--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
-<!DOCTYPE HTML>
-<!-- Website template by freewebsitetemplates.com -->
+<!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
-	<title>Zerotype Website Template</title>
-	<link rel="stylesheet" href="css/style.css" type="text/css">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700|Roboto:400,700,700italic,400italic' rel='stylesheet' type='text/css'>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <meta charset="UTF-8">
+    <title>Home- Wayne Hills NHS</title>
+    
 </head>
 <body>
 	<div id="header">
 		<div>
 			<div class="logo">
-				<a href="index.html">Zero Type</a>
+				<a href="index.html">NHS</a>
 			</div>
 			<ul id="navigation">
 				<li class="active">
 					<a href="index.html">Home</a>
-				</li>
-				<li>
-					<a href="features.html">Features</a>
 				</li>
 				<li>
 					<a href="news.html">News</a>
@@ -28,19 +27,10 @@
 				<li>
 					<a href="contact.html">Contact</a>
 				</li>
+                                <li>
+					<a href="home.php">My NHS</a>
+				</li>
 			</ul>
-		</div>
-	</div>
-	<div id="adbox">
-		<div class="clearfix">
-			<img src="images/box.png" alt="Img" height="342" width="368">
-			<div>
-				<h1>Ideas?</h1>
-				<h2>That's what we live for.</h2>
-				<p>
-					Wix is an online website builder with a simple drag & drop interface, meaning you do the work online and instantly publish to the web. <span><a href="index.html" class="btn">Try It Now!</a><b>Don’t worry it’s for free</b></span>
-				</p>
-			</div>
 		</div>
 	</div>
 	<div id="contents">
@@ -76,7 +66,7 @@
 				<a href="http://freewebsitetemplates.com/go/facebook/" target="_blank" class="facebook"></a><a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a><a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a><a href="http://www.freewebsitetemplates.com/misc/contact/" target="_blank" class="tumbler"></a>
 			</div>
 			<p>
-				© 2023 Zerotype. All Rights Reserved.
+				Designed by Kartik Prabhu
 			</p>
 		</div>
 	</div>
