--- a/index.html
+++ b/index.html
@@ -3,71 +3,69 @@
 <head>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700|Roboto:400,700,700italic,400italic' rel='stylesheet' type='text/css'>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/themes/blitzer/jquery-ui.min.css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <meta charset="UTF-8">
     <title>Home- Wayne Hills NHS</title>
     
 </head>
 <body>
-	<div id="header">
-		<div>
-			<div class="logo">
-				<a href="index.html">NHS</a>
-			</div>
-			<ul id="navigation">
-				<li class="active">
-					<a href="index.html">Home</a>
-				</li>
-				<li>
-					<a href="news.html">News</a>
-				</li>
-				<li>
-					<a href="about.html">About</a>
-				</li>
-				<li>
-					<a href="contact.html">Contact</a>
-				</li>
-                                <li>
-					<a href="home.php">My NHS</a>
-				</li>
-			</ul>
-		</div>
-	</div>
-	<div id="contents">
-		<div id="tagline" class="clearfix">
-			<h1>Design With Simplicity.</h1>
+	<div id="wrapper">
+		<div id="header">
 			<div>
-				<p>
-					You can replace all this text with your own text. Want an easier solution for a Free Website?
-				</p>
-				<p>
-					Head straight to Wix and immediately start customizing your website!
-				</p>
-				<p>
-					Wix is an online website builder with a simple drag & drop interface, meaning you do the work online and instantly publish to the web.
-				</p>
-			</div>
-			<div>
-				<p>
-					You can replace all this text with your own text. Want an easier solution for a Free Website?
-				</p>
-				<p>
-					Head straight to Wix and immediately start customizing your website!
-				</p>
-				<p>
-					Wix is an online website builder with a simple drag & drop interface, meaning you do the work online and instantly publish to the web.
-				</p>
+				<div class="logo">
+					<a href="index.html">NHS</a>
+				</div>
+				<ul id="navigation">
+					<li class="active">
+						<a href="index.html">Home</a>
+					</li>
+					<li>
+						<a href="news.html">News</a>
+					</li>
+					<li>
+						<a href="tutoring.php">Tutoring</a>
+					</li>
+					<li>
+						<a href="contact.html">Contact</a>
+					</li>
+	                <li>
+						<a href="home.php">My NHS</a>
+					</li>
+				</ul>
 			</div>
 		</div>
-	</div>
-	<div id="footer">
-		<div class="clearfix">
-			<div id="connect">
-				<a href="http://freewebsitetemplates.com/go/facebook/" target="_blank" class="facebook"></a><a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a><a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a><a href="http://www.freewebsitetemplates.com/misc/contact/" target="_blank" class="tumbler"></a>
+		<div id="contents">
+			<div id="tagline" class="clearfix">
+				<h1>Welcome to the Wayne Hills NHS Homepage!</h1>
+				<div>
+					<h2>
+						Members:
+					</h2>
+					<p>
+						View your current credit count by logging in to My NHS.
+					</p>
+					<p>
+						Print out an <a href = "outsidecredit.pdf">outside credit form</a>.
+					</p>
+				</div>
+				<div>
+					<h2>
+						Non-members:
+					</h2>
+					<p>
+						Sign up for one on one tutoring!
+					</p>
+				</div>
 			</div>
-			<p>
-				Designed by Kartik Prabhu
-			</p>
+		</div>
+		<div id="footer">
+			<div class="clearfix">
+				<p>
+					Designed by Kartik Prabhu
+				</p>
+			</div>
 		</div>
 	</div>
 </body>
