--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						Members:
 					</h2>
 					<p>
-						View your current credit count by logging in to My NHS.
+						View the <a href="Constitution.docx" >NHS Constitution</a>.
 					</p>
 					<p>
 						Print out an <a href = "outsidecredit.pdf">outside credit form</a>.
