--- a/files.html
+++ b/files.html
@@ -21,13 +21,13 @@
 					<li>
 						<a href="index.html">Home</a>
 					</li>
-					<li>
+					<li class="active">
 						<a href="files.html">Files</a>
 					</li>
 					<li>
 						<a href="tutoring.php">Tutoring</a>
 					</li>
-					<li class="active">
+					<li>
 						<a href="contact.html">Contact</a>
 					</li>
 	                <li>
@@ -38,7 +38,10 @@
 		</div>
 		<div id="contents">
 			<div id="tagline" class="clearfix">
-				<h1>Contact</h1>
+				<h1>Important Files:</h1>
+				<a href="outsidecredit.pdf">Outside Credit Form.</a>
+				<br>
+				<a href="Constitution.docx">Constitution.</a>
 			</div>
 		</div>
 		<div id="footer">
