--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<a href="index.html">Home</a>
 					</li>
 					<li>
-						<a href="news.html">News</a>
+						<a href="files.html">Files</a>
 					</li>
 					<li>
 						<a href="tutoring.php">Tutoring</a>
@@ -31,7 +31,7 @@
 						<a href="contact.html">Contact</a>
 					</li>
 	                <li>
-						<a href="home.php">My NHS</a>
+	                <a href="home.php">Log In</a>
 					</li>
 				</ul>
 			</div>
@@ -44,10 +44,7 @@
 						Members:
 					</h2>
 					<p>
-						View the <a href="Constitution.docx" >NHS Constitution</a>.
-					</p>
-					<p>
-						Print out an <a href = "outsidecredit.pdf">outside credit form</a>.
+						Check your current credit count by logging in!
 					</p>
 				</div>
 				<div>
