--- a/files.html
+++ b/files.html
@@ -42,6 +42,8 @@
 				<a href="outsidecredit.pdf">Outside Credit Form.</a>
 				<br>
 				<a href="Constitution.docx">Constitution.</a>
+				<br>
+				<a href="MembershipPacket.docx">Membership Packet.</a>
 			</div>
 		</div>
 		<div id="footer">
